--- a/Draw/Controller/Home/MenuPanel.xib
+++ b/Draw/Controller/Home/MenuPanel.xib
@@ -38,13 +38,13 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="652084492">
+					<object class="IBUIImageView" id="305665705">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 224}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="936972183"/>
+						<reference key="NSNextKeyView" ref="979056741"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -52,7 +52,7 @@
 							<string key="NSResourceName">main_menubg@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUILabel" id="492149381">
+					<object class="IBUILabel" id="608382220">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{274, 210}, {46, 12}}</string>
@@ -88,13 +88,13 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIScrollView" id="936972183">
+					<object class="IBUIScrollView" id="979056741">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrameSize">{320, 224}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="457546672"/>
+						<reference key="NSNextKeyView" ref="771539766"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -106,14 +106,14 @@
 						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
 						<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 					</object>
-					<object class="IBUIPageControl" id="457546672">
+					<object class="IBUIPageControl" id="771539766">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">-2147482332</int>
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrame">{{141, 180}, {38, 36}}</string>
+						<string key="NSFrame">{{141, 190}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="492149381"/>
+						<reference key="NSNextKeyView" ref="608382220"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -124,7 +124,7 @@
 				<string key="NSFrameSize">{320, 224}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="652084492"/>
+				<reference key="NSNextKeyView" ref="305665705"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -141,7 +141,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">versionLabel</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="492149381"/>
+						<reference key="destination" ref="608382220"/>
 					</object>
 					<int key="connectionID">8</int>
 				</object>
@@ -149,7 +149,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">scrollView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="936972183"/>
+						<reference key="destination" ref="979056741"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
@@ -157,14 +157,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">pageControl</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="457546672"/>
+						<reference key="destination" ref="771539766"/>
 					</object>
 					<int key="connectionID">10</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">changePage:</string>
-						<reference key="source" ref="457546672"/>
+						<reference key="source" ref="771539766"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">13</int>
 					</object>
@@ -183,10 +183,10 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="652084492"/>
-							<reference ref="936972183"/>
-							<reference ref="492149381"/>
-							<reference ref="457546672"/>
+							<reference ref="305665705"/>
+							<reference ref="979056741"/>
+							<reference ref="608382220"/>
+							<reference ref="771539766"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -203,23 +203,23 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="652084492"/>
+						<reference key="object" ref="305665705"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="936972183"/>
+						<reference key="object" ref="979056741"/>
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="492149381"/>
+						<reference key="object" ref="608382220"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="457546672"/>
+						<reference key="object" ref="771539766"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
